snapshots/syntax/library/functions/file/fileattr/fileattr_or_condition.snap
---
source: src/syntax/library/functions/file/fileattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: isWritable
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: ParenthesizedExpression
          children:
            - kind: LeftParenthesis
              text: (
            - kind: BinaryExpression
              children:
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: FileAttr
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: fileNum
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "1"
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "2"
                - kind: Whitespace
                  text: " "
                - kind: OrKeyword
                  text: Or
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: FileAttr
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: fileNum
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "1"
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "8"
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
